reverted changes / new heroku deployment in git.sh is functional

--- a/public/app/main/main.html
+++ b/public/app/main/main.html
@@ -1,1 +1,1 @@
-<div class="container"><div class="jumbotron"><h1>Inventory Management System</h1><p>Inventory Management System designed and built by David Cole (CONVERT)</p></div><div class="row"><div class="col-md-6"></div><div class="col-md-6"></div></div></div>
+<div class="container"><div class="jumbotron"><h1>Inventory Management System</h1><p>Inventory Management System designed and built by David Cole</p></div><div class="row"><div class="col-md-6"></div><div class="col-md-6"></div></div></div>
