users and products both using item-details template

--- a/public/app/admin/product/product-details.html
+++ b/public/app/admin/product/product-details.html
@@ -1,1 +1,1 @@
-<div class="container"><item-details></item-details><h4 ng-repeat="(key, val) in product">{{ key }}: {{ val }}</h4></div>
+<div class="container"><item-details></item-details><h4 ng-repeat="(key, val) in currentItem">{{ key }}: {{ val }}</h4></div>
