--- a/public/app/admin/user/user-details.html
+++ b/public/app/admin/user/user-details.html
@@ -1,1 +1,1 @@
-<div class="container"><a href="/admin/users" class="btn btn-tabs btn-sm"><< Back to Users</a><h1 class="form-inline">{{ user.firstName + ' ' + user.lastName }}</h1><button ng-click="deleteUser(user._id, user.firstName, user.lastName)" class="btn btn-default">Delete User</button><hr/><h4 ng-repeat="(key, val) in user">{{ key }}: {{ val }}</h4></div>
+<div class="container"><item-details></item-details><h4 ng-repeat="(key, val) in currentItem">{{ key }}: {{ val }}</h4></div>
