--- a/public/app/screens/inbound/new-purchase-order.html
+++ b/public/app/screens/inbound/new-purchase-order.html
@@ -1,1 +1,1 @@
-<div class="container"><h1 class="text-center">New Purchase Order</h1><h2>{{ product.name }}</h2></div>
+<div class="container"><h1 class="text-center">New Purchase Order</h1><h2>Location: {{ location }}</h2><h2>Has product: {{ product }}</h2></div>
