--- a/public/app/admin/inbound/inbound-details.html
+++ b/public/app/admin/inbound/inbound-details.html
@@ -1,1 +1,1 @@
-<div class="container"><h1 class="inbound-header text-center">Details for Order Number {{ order.orderNumber }}</h1></div>
+<div class="container"><item-details></item-details></div>
