--- a/public/app/admin/inbound/inbound-details.html
+++ b/public/app/admin/inbound/inbound-details.html
@@ -1,1 +1,1 @@
-<div class="container"><item-details></item-details><!--TODO:--></div>
+<div class="container"><item-details></item-details><h4 ng-repeat="(key, value) in order">{{key}}: {{value}}</h4></div>
