improvements to receiving page. reloads the receiving page, opens same order, after receiving

--- a/public/app/screens/inbound/inbound-details.html
+++ b/public/app/screens/inbound/inbound-details.html
@@ -1,1 +1,1 @@
-<div class="container"><item-details></item-details><h4 ng-repeat="(key, value) in order">{{key}}: {{value}}</h4></div>
+<div class="container"><button-tabs></button-tabs><item-details></item-details><h4 ng-repeat="(key, value) in order">{{key}}: {{value}}</h4></div>
