--- a/public/app/admin/product/product-details.html
+++ b/public/app/admin/product/product-details.html
@@ -1,1 +1,1 @@
-<div class="container"><button-tabs></button-tabs><item-details></item-details><h4 ng-repeat="(key, val) in currentItem"><p ng-show="key !== 'locations'">{{ key }}: {{ val }}</p><p ng-show="key == 'locations'">{{ key }}: {{ locations }}</p></h4></div>
+<div class="container"><button-tabs></button-tabs><item-details></item-details><h4 ng-repeat="(key, val) in currentItem"><p ng-show="key !== 'locations'">{{ key }}: {{ val }}</p></h4></div>
