--- a/public/app/admin/user/user-details.html
+++ b/public/app/admin/user/user-details.html
@@ -1,1 +1,1 @@
-<div class="container"><item-details></item-details><h4 ng-repeat="(key, val) in currentItem">{{ key }}: {{ val }}</h4></div>
+<div class="container"><button-tabs></button-tabs><item-details></item-details><h4 ng-repeat="(key, val) in currentItem">{{ key }}: {{ val }}</h4></div>
