sorting/reverse sorting added to receiving page

--- a/public/app/screens/locations/locations.html
+++ b/public/app/screens/locations/locations.html
@@ -1,1 +1,1 @@
-<div class="container"><list-items></list-items></div>
+<div class="container"><list-items ng-controller="mvLocationsScreenCtrl"></list-items></div>
